--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,38 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_settings">SettingsActivity</string>
 
+    <string name="default_vehicle_type">PROP</string>
+    <string-array name="pref_vehicle_type_entries">
+        <item>Propboat</item>
+        <item>Airboat</item>
+    </string-array>
+    <string-array name="pref_vehicle_type_values">
+        <item>PROP</item>
+        <item>AIR</item>
+    </string-array>
+
+    <string name="speed_prompt">Vehicle speed</string>
+    <string-array name="spinner_speed_entries">
+        <item>Slow</item>
+        <item>Medium</item>
+        <item>Fast</item>
+        <item>Custom</item>
+    </string-array>
+
+
+    <string name="default_speed">MEDIUM</string>
+    <string-array name="pref_speed_entries">
+        <item>Slow</item>
+        <item>Medium</item>
+        <item>Fast</item>
+        <item>Custom (set PID values below)</item>
+    </string-array>
+    <string-array name="pref_speed_values">
+        <item>SLOW</item>
+        <item>MEDIUM</item>
+        <item>FAST</item>
+        <item>CUSTOM</item>
+    </string-array>
+
+
 </resources>
